# spotify2tidal

./: .gitignore  CLAUDE.md  config.py  config.toml.example  exporters.py  main.py  matching.py  models.py  name_match_rules.toml  pyproject.toml  services.py  spotify.py  tidal.py
