[project]
name = "spotify2tidal"
version = "0.1.0"
description = "Fetch Spotify playlists and export/migrate them"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "spotipy>=2.24.0",
    "click>=8.1.0",
    "tidalapi>=0.8.11",
    "rapidfuzz>=3.14.5",
]

[project.scripts]
spotify2tidal = "main:main"
